# animelist-desktop

./: README.md  mainapp.py  pyproject.toml
